fixing top alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,7 @@
     width:100%;
     background-color: white;
     color: black;
-    padding: 5rem 1rem;
+    padding: 1rem 1rem;
     display: flex;
     align-items: center;
 }
@@ -199,13 +199,13 @@ a {
     width: 100%;
     background-color: white; /* Adjust as needed */
     z-index: 1000;
-    padding: 4rem 2rem 0rem 2rem;
+    padding: 0.55rem 2rem;
     display: flex;
     flex-direction: column;
 }
 
 .scrollable-content {
-    margin-top: 4rem; /* Adjust based on the height of your fixed header */
+    margin-top: 100px; /* Adjust based on the height of your fixed header */
     overflow-y: auto;
     max-height: calc(100vh - 100px); /* Adjust based on the height of your fixed header */
     width: 100%;
@@ -223,9 +223,7 @@ a {
     row-gap: 0.65rem;
     background-color:white; 
     width: 100%;
-    padding-top: 3.75rem;
-    margin-top: 3rem;
-    margin-bottom: 0rem; /* adjustment for the gap between footer*/
+    margin-bottom: 4.5rem; /* adjustment for the gap between footer*/
 }
 
 
@@ -564,7 +562,7 @@ border: none;
     flex-direction: column;
     background-color: white;
     /* padding: 1rem 1rem; */
-    padding: 4rem 1.5rem 2.8rem 1.5rem; /* adjustment for the gap between footer*/
+    padding: 1rem 1.5rem 2.8rem 1.5rem; /* adjustment for the gap between footer*/
     height: auto;
 }
 
